# classificationBasicML

./: README.md  pyproject.toml  this.txt
notebooks/: all_matrics.py  best_classifier.py  compile_classification.ipynb  plot_confussion_matrix.ipynb  tax_pull.py  test_multi_classification.py
scripts/: data_transform.py  model_dashboard.py
